k8s/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask
  namespace: flask-app
spec:
  type: NodePort
  selector:
    app: flask
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30007
